--- a/index.html
+++ b/index.html
@@ -510,6 +510,7 @@
             .qr-icon-result { width: 22px; height: 22px; }
         }
     </style>
+    <script src="https://pl28509387.effectivegatecpm.com/53/db/26/53db268445c50dc2493595c606a86a4d.js"></script>
 </head>
 <body>
     <div class="stars" id="stars"></div>
