Include async script for external resource
Added asynchronous script for external resource loading.

--- a/index.html
+++ b/index.html
@@ -834,5 +834,7 @@
             });
         });
     </script>
+    <script async="async" data-cfasync="false" src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js"></script>
+    <div id="container-f61aad515a717738d5203cd2761b88bc"></div>
 </body>
 </html>
