Implement adblock overlay in index.html
Added an adblock overlay with loading message.

--- a/index.html
+++ b/index.html
@@ -548,6 +548,15 @@
     <script src="https://pl28509387.effectivegatecpm.com/53/db/26/53db268445c50dc2493595c606a86a4d.js"></script>
 </head>
 <body>
+
+    <div id="adblock-overlay">
+  <div class="adblock-box">
+    <div class="spinner"></div>
+    <h2 id="adblock-title">Loading...</h2>
+    <p id="adblock-text">Please wait</p>
+  </div>
+</div>
+    
     <div class="stars" id="stars"></div>
 
     <div class="wrapper">
