--- a/index.html
+++ b/index.html
@@ -23,29 +23,37 @@
             padding-top: 20px;
         }
 
- #adblock-overlay {
+  body.adblock-locked {
+    overflow: hidden;
+  }
+
+  #adblock-overlay {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
+    inset: 0;
     background: #0b0b0b;
     z-index: 999999;
     display: flex;
     align-items: center;
     justify-content: center;
+    opacity: 1;
+    transition: opacity 0.6s ease;
+  }
+
+  #adblock-overlay.fade-out {
+    opacity: 0;
+    pointer-events: none;
   }
 
   .adblock-box {
     text-align: center;
     color: #fff;
     font-family: Arial, sans-serif;
+    max-width: 90%;
   }
 
-  /* Loading Spinner */
   .spinner {
-    width: 60px;
-    height: 60px;
+    width: 56px;
+    height: 56px;
     border: 6px solid #333;
     border-top: 6px solid #fff;
     border-radius: 50%;
@@ -54,8 +62,7 @@
   }
 
   @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    to { transform: rotate(360deg); }
   }
         
         body.dark-mode {
