Replace adblock overlay with page guard

--- a/index.html
+++ b/index.html
@@ -556,11 +556,11 @@
 </head>
 <body>
 
-<div id="adblock-overlay">
-  <div class="adblock-box">
-    <div class="spinner"></div>
-    <h2 id="adblock-title">Loading...</h2>
-    <p id="adblock-text">Checking your browser</p>
+<div id="page-guard">
+  <div class="page-guard-box">
+    <div class="loader"></div>
+    <h2 id="guard-title">Checking your browser…</h2>
+    <p id="guard-text">Please wait</p>
   </div>
 </div>
     
