--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             padding-top: 20px;
         }
 
-  body.adblock-locked {
+  html.locked {
     overflow: hidden;
   }
 
-  #adblock-overlay {
+  #page-guard {
     position: fixed;
     inset: 0;
     background: #0b0b0b;
@@ -39,19 +39,18 @@
     transition: opacity 0.6s ease;
   }
 
-  #adblock-overlay.fade-out {
+  #page-guard.fade-out {
     opacity: 0;
     pointer-events: none;
   }
 
-  .adblock-box {
+  .page-guard-box {
     text-align: center;
     color: #fff;
     font-family: Arial, sans-serif;
-    max-width: 90%;
   }
 
-  .spinner {
+  .loader {
     width: 56px;
     height: 56px;
     border: 6px solid #333;
