--- a/index.html
+++ b/index.html
@@ -51,6 +51,36 @@
   margin: 0 auto 20px;
 }
 @keyframes spin { to { transform: rotate(360deg); } }
+
+#bottom-container {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  z-index: 9998;
+  padding: 8px 0;
+  background: #000;
+}
+
+#bottom-ad-slot {
+  display: inline-block;
+  margin: 0 auto;
+  width: 728px;
+  max-width: 100%;
+  height: auto;
+}
+
+@media (max-width: 768px) {
+  #bottom-ad-slot {
+    width: 320px;
+    height: auto;
+  }
+  #bottom-container {
+    padding: 4px 0;
+  }
+}
+
         
         body.dark-mode {
             background-color: #000000;
