Remove duplicate script tags and add new script

--- a/index.html
+++ b/index.html
@@ -841,100 +841,7 @@
 </script>
 <div id="container-f61aad515a717738d5203cd2761b88bc"></div>
 
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
-
-    <script async="async" data-cfasync="false" 
-        src="https://pl28509505.effectivegatecpm.com/f61aad515a717738d5203cd2761b88bc/invoke.js">
-</script>
-<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
+<script src="https://resignedincidentallysurprise.com/53/db/26/53db268445c50dc2493595c606a86a4d.js"></script>
 
 <style>
 /* Bottom, centered ad */
