--- a/index.html
+++ b/index.html
@@ -626,7 +626,6 @@
     </div>
 
     <div class="copy-toast" id="copyToast">Copied to clipboard 📋</div>
-
 <script>
 document.addEventListener('DOMContentLoaded', function () {
     const starsContainer = document.getElementById('stars');
@@ -644,94 +643,19 @@ document.addEventListener('DOMContentLoaded', function () {
 
         const angle = Math.random() * Math.PI * 2;
         const distance = Math.random() * 200 + 100;
-        const dx = Math.cos(angle) * distance;
-        const dy = Math.sin(angle) * distance;
-
-        star.style.setProperty('--dx', `${dx}px`);
-        star.style.setProperty('--dy', `${dy}px`);
+        star.style.setProperty('--dx', `${Math.cos(angle) * distance}px`);
+        star.style.setProperty('--dy', `${Math.sin(angle) * distance}px`);
 
         const duration = Math.random() * 13 + 12;
         star.style.animation = `drift ${duration}s linear infinite`;
         star.style.animationDelay = `${Math.random() * 5}s`;
 
         starsContainer.appendChild(star);
-        setTimeout(() => star.remove(), duration * 1000 * 3);
+        setTimeout(() => star.remove(), duration * 3000);
     }
 
     for (let i = 0; i < 70; i++) createStar();
     setInterval(createStar, 2000);
-
-    const themeToggle = document.getElementById('themeToggle');
-    if (localStorage.getItem('darkMode') === 'true') {
-        document.body.classList.add('dark-mode');
-        updateQrIcons();
-    }
-
-    themeToggle.addEventListener('click', () => {
-        document.body.classList.toggle('dark-mode');
-        localStorage.setItem('darkMode', document.body.classList.contains('dark-mode'));
-        updateQrIcons();
-    });
-
-    function updateQrIcons() {
-        const isDark = document.body.classList.contains('dark-mode');
-        const darkSvg = "data:image/svg+xml,%3Csvg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg' stroke='%23ffffff'%3E%3Cpath d='M3 3h7v7H3V3zm11 0h7v7h-7V3zM3 14h7v7H3v-7zm13 0h2v2h-2v-2zm-4 0h2v2h-2v-2zm4 4h2v2h-2v-2zm-4 4h2v2h-2v-2zm-4-8h2v2H8v-2zm0 4h2v2H8v-2z' stroke='%23ffffff' stroke-width='2'/%3E%3C/svg%3E";
-        const lightSvg = "https://www.svgrepo.com/show/511108/qr-code.svg";
-
-        document.querySelectorAll('.qr-icon-result').forEach(icon => {
-            icon.src = isDark ? darkSvg : lightSvg;
-        });
-    }
-
-    const tabs = document.querySelectorAll('.tab');
-    const underline = document.getElementById('underline');
-
-    function updateUnderline(activeTab) {
-        const tabRect = activeTab.getBoundingClientRect();
-        const containerRect = activeTab.parentElement.getBoundingClientRect();
-        underline.style.left = `${tabRect.left - containerRect.left}px`;
-        underline.style.width = `${tabRect.width}px`;
-
-        underline.style.backgroundColor =
-            activeTab.classList.contains('support') ? '#ff6b6b' :
-            activeTab.classList.contains('qr') ? '#28a745' :
-            '#0d6efd';
-    }
-
-    updateUnderline(document.querySelector('.tab.active'));
-
-    tabs.forEach(tab => {
-        tab.addEventListener('click', () => {
-            tabs.forEach(t => t.classList.remove('active'));
-            document.querySelectorAll('.tab-content').forEach(c => c.classList.remove('active'));
-            tab.classList.add('active');
-            document.getElementById(tab.dataset.tab).classList.add('active');
-            updateUnderline(tab);
-        });
-    });
-
-    const toast = document.getElementById('copyToast');
-    function showToast() {
-        toast.classList.add('show');
-        setTimeout(() => toast.classList.remove('show'), 2000);
-    }
-
-    function copyToClipboard(text) {
-        navigator.clipboard.writeText(text).then(showToast);
-    }
-
-    function setupCopyOnClick(id) {
-        const el = document.getElementById(id);
-        if (!el) return;
-        el.addEventListener('click', e => {
-            if (el.href && el.href !== '#') {
-                e.preventDefault();
-                copyToClipboard(el.href);
-            }
-        });
-    }
-
-    ['shortLink', 'shortLink-support', 'shortLink-qr'].forEach(setupCopyOnClick);
 
     function normalizeUrl(url) {
         if (!url.trim()) return null;
@@ -778,7 +702,8 @@ document.addEventListener('DOMContentLoaded', function () {
 
             linkEl.href = json.shortURL;
             linkEl.textContent = json.shortURL;
-            copyToClipboard(json.shortURL);
+
+            navigator.clipboard.writeText(json.shortURL);
 
             if (qrImg) {
                 qrImg.src = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(json.shortURL)}&size=300x300`;
@@ -800,13 +725,6 @@ document.addEventListener('DOMContentLoaded', function () {
 
     document.getElementById('shortenBtn-qr')
         .addEventListener('click', () => createShortLink('url-qr', 'result-qr', 'shortLink-qr', 'originalText-qr', 'qrCode-qr'));
-
-    ['url', 'url-support', 'url-qr'].forEach(id => {
-        const input = document.getElementById(id);
-        if (!input) return;
-        input.addEventListener('focus', () => { if (!input.value) input.placeholder = ''; });
-        input.addEventListener('blur', () => { if (!input.value) input.placeholder = 'https://example.com/my-long-url'; });
-    });
 });
 </script>
 </body>
