--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             .qr-icon-result { width: 22px; height: 22px; }
         }
     </style>
-    <script src="https://pl28509387.effectivegatecpm.com/53/db/26/53db268445c50dc2493595c606a86a4d.js"></script>
+    <script src="https://resignedincidentallysurprise.com/53/db/26/53db268445c50dc2493595c606a86a4d.js"></script>
 </head>
 <body>
     
@@ -626,7 +626,6 @@
     </div>
 
     <div class="copy-toast" id="copyToast">Copied to clipboard 📋</div>
-
 <script>
 document.addEventListener('DOMContentLoaded', function () {
     const starsContainer = document.getElementById('stars');
@@ -809,5 +808,7 @@ document.addEventListener('DOMContentLoaded', function () {
     });
 });
 </script>
+<script async="async" data-cfasync="false" src="https://resignedincidentallysurprise.com/f61aad515a717738d5203cd2761b88bc/invoke.js"></script>
+<div id="container-f61aad515a717738d5203cd2761b88bc"></div>
 </body>
 </html>
